--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.1.6",
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
